--- a/comparison/package.json
+++ b/comparison/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.4.5",
+    "firebase": "^1.0.17",
+    "request": "^2.36.0"
+  }
 }
