--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apibase",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Easily build APIs on top of Firebase",
   "main": "apibase.js",
   "directories": {
@@ -28,5 +28,10 @@
   "dependencies": {
     "firebase": "^1.0.17",
     "request": "^2.36.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.5",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^0.3.1"
   }
 }
